Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-14444

LBUG: client kernel panic with "ASSERTION( req->rq_reqmsg ) failed"

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.15.0
    • Lustre 2.14.0, Lustre 2.12.6
    • 3
    • 9223372036854775807

      A client node got a kernel panic with the log:

      2021-02-17T13:04:06.296603+01:00 node1001 kern.warning kernel: Lustre: 214367:0:(sec_gss.c:315:cli_ctx_expire()) ctx 00000000978c878b(72801->lustre-MDT0001_UUID) get expired: 1613563430(-16s)
      2021-02-17T13:04:06.343079+01:00 node1001 kern.warning kernel: Lustre: 214372:0:(sec_gss.c:377:gss_cli_ctx_uptodate()) client refreshed ctx 000000004331a6ad idx 0xb7afb39c064dbfbe (72801->lustre-MDT0001_UUID), expiry 1613564032(+586s)
      2021-02-17T13:04:06.370536+01:00 node1001 kern.warning kernel: Lustre: 214367:0:(sec_gss.c:1228:gss_cli_ctx_fini_common()) gss.keyring@0000000023f60ad5: destroy ctx 00000000e97836cf(72801->lustre-MDT0000_UUID)
      2021-02-17T13:04:07.339156+01:00 node1001 kern.emerg kernel: LustreError: 214366:0:(sec.c:497:sptlrpc_req_ctx_switch()) ASSERTION( req->rq_reqmsg ) failed:
      2021-02-17T13:04:07.339293+01:00 node1001 kern.emerg kernel: LustreError: 214366:0:(sec.c:497:sptlrpc_req_ctx_switch()) LBUG
      2021-02-17T13:04:07.339357+01:00 node1001 kern.info kernel: Pid: 214366, comm: slurm_script 4.18.0-193.6.3.el8_2.x86_64 #1 SMP Mon Jun 1 20:24:55 UTC 2020
      2021-02-17T13:04:07.351784+01:00 node1001 kern.info kernel: Call Trace TBD:
      2021-02-17T13:04:07.351850+01:00 node1001 kern.emerg kernel: Kernel panic - not syncing: LBUG
      

      The error occurred while doing this kind of test:

      while :; do date; klist; ls $HOME|wc; klist; sleep 1; done
      

            sebastien Sebastien Buisson
            sebastien Sebastien Buisson
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: