lustre/ptlrpc/sec.c
@@ -492,14 +492,10 @@ int sptlrpc_req_ctx_switch(struct ptlrpc_request *req,
 			   struct ptlrpc_cli_ctx *oldctx,
 			   struct ptlrpc_cli_ctx *newctx)
 {
-	struct sptlrpc_flavor   old_flvr;
+	struct sptlrpc_flavor old_flvr;
 	char *reqmsg = NULL; /* to workaround old gcc */
 	int reqmsg_size;
 	int rc = 0;
-
-	LASSERT(req->rq_reqmsg);
-	LASSERT(req->rq_reqlen);
-	LASSERT(req->rq_replen);
 
 	CDEBUG(D_SEC,
 	       "req %p: switch ctx %p(%u->%s) -> %p(%u->%s), switch sec %p(%s) -> %p(%s)\n",
@@ -515,6 +511,7 @@ int sptlrpc_req_ctx_switch(struct ptlrpc_request *req,
 	/* save request message */
 	reqmsg_size = req->rq_reqlen;
 	if (reqmsg_size != 0) {
+		LASSERT(req->rq_reqmsg);
 		OBD_ALLOC_LARGE(reqmsg, reqmsg_size);
 		if (reqmsg == NULL)
 			return -ENOMEM;
